--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/blue.css">
 
-	<script src="js/libs/modernizr-2.0.6.min.js"></script>
+	<script src="js/modernizr.js"></script>
 </head>
 <body>
 
