add colors.css & colors.js

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/colors.css">
 	<link rel="stylesheet" href="css/blue.css">
 
 	<script src="js/modernizr.js"></script>
+	<script src="js/colors.js"></script>
 </head>
 <body>
 
